Se agregó poda a backtracking